categoriler endpointleri tamamlandı. silme, güncelleme, oluşturma, fetch etme endpointleri oluşturuldu. swaggera eklendi.
